[gd_scene load_steps=2 format=3 uid="uid://cgotsvr67h3x7"]

[ext_resource type="Script" uid="uid://dosg3fqohgpvd" path="res://scripts/main/main.gd" id="1_g5tus"]

[node name="root" type="Node2D"]
position = Vector2(360, 500)
script = ExtResource("1_g5tus")
metadata/_edit_horizontal_guides_ = [-48.0]
metadata/_edit_vertical_guides_ = [360.0, 527.0]

[node name="device_connection" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="form" type="Node2D" parent="device_connection"]

[node name="ssid" type="LineEdit" parent="device_connection/form"]
offset_left = 245.0
offset_top = 97.0
offset_right = 477.0
offset_bottom = 139.0
pivot_offset = Vector2(115, 685)
placeholder_text = "wifi ssid"
metadata/_edit_use_anchors_ = true

[node name="password" type="LineEdit" parent="device_connection/form"]
offset_left = 245.0
offset_top = 164.0
offset_right = 477.0
offset_bottom = 205.0
pivot_offset = Vector2(115, 618)
placeholder_text = "password"
metadata/_edit_use_anchors_ = true

[node name="send" type="Button" parent="device_connection"]
offset_left = 194.0
offset_top = 234.0
offset_right = 331.0
offset_bottom = 312.0
pivot_offset = Vector2(166, 548)
text = "Connect fotosintetic
device to
internet"
metadata/_edit_use_anchors_ = true

[node name="already_connected" type="Button" parent="device_connection"]
offset_left = 389.0
offset_top = 234.0
offset_right = 524.0
offset_bottom = 311.0
pivot_offset = Vector2(-29, 548)
text = "fotosintetic device
already
connected?"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="device_connection"]
offset_left = 193.0
offset_top = 339.0
offset_right = 526.0
offset_bottom = 370.0
pivot_offset = Vector2(167, 443)
text = "device status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="device_connection"]
offset_left = 151.0
offset_top = 385.0
offset_right = 570.0
offset_bottom = 481.0
pivot_offset = Vector2(209, 397)
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="device_connection"]

[node name="server" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="form" type="Node2D" parent="server"]

[node name="device_name" type="LineEdit" parent="server/form"]
offset_left = 245.0
offset_top = 535.0
offset_right = 476.0
offset_bottom = 576.0
pivot_offset = Vector2(115, 247)
size_flags_horizontal = 6
size_flags_vertical = 4
placeholder_text = "device name"
editable = false
metadata/_edit_use_anchors_ = true

[node name="password" type="LineEdit" parent="server/form"]
offset_left = 245.0
offset_top = 602.0
offset_right = 472.0
offset_bottom = 647.0
pivot_offset = Vector2(115, 180)
size_flags_horizontal = 6
size_flags_vertical = 4
placeholder_text = "password"
editable = false
metadata/_edit_use_anchors_ = true

[node name="register_device" type="Button" parent="server"]
offset_left = 194.0
offset_top = 676.0
offset_right = 330.0
offset_bottom = 753.0
pivot_offset = Vector2(166, 106)
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "Register new
device"
metadata/_edit_use_anchors_ = true

[node name="log_in" type="Button" parent="server"]
offset_left = 389.0
offset_top = 676.0
offset_right = 524.0
offset_bottom = 753.0
pivot_offset = Vector2(-29, 106)
disabled = true
text = "Log In"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="server"]
offset_left = 194.0
offset_top = 785.0
offset_right = 528.0
offset_bottom = 816.0
pivot_offset = Vector2(166, -3)
size_flags_horizontal = 6
size_flags_vertical = 4
text = "server status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="server"]
offset_left = 149.0
offset_top = 842.0
offset_right = 570.0
offset_bottom = 942.0
pivot_offset = Vector2(211, -60)
size_flags_horizontal = 6
size_flags_vertical = 4
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="server"]

[node name="device_credentials" type="Node2D" parent="."]
position = Vector2(-360, -540)

[node name="form" type="Node2D" parent="device_credentials"]

[node name="send" type="Button" parent="device_credentials"]
offset_left = 194.0
offset_top = 1026.0
offset_right = 342.0
offset_bottom = 1103.0
pivot_offset = Vector2(166, -257)
disabled = true
text = "Send device name
and password to
fotosintetic device"
metadata/_edit_use_anchors_ = true

[node name="already_logged_in" type="Button" parent="device_credentials"]
offset_left = 389.0
offset_top = 1026.0
offset_right = 523.0
offset_bottom = 1103.0
pivot_offset = Vector2(-29, -257)
disabled = true
text = "fotosintetic device
already logged
in?"
metadata/_edit_use_anchors_ = true

[node name="label" type="LineEdit" parent="device_credentials"]
offset_left = 193.0
offset_top = 1178.0
offset_right = 527.0
offset_bottom = 1209.0
pivot_offset = Vector2(167, -420)
size_flags_horizontal = 3
text = "device status"
alignment = 1
editable = false
metadata/_edit_use_anchors_ = true

[node name="status" type="TextEdit" parent="device_credentials"]
offset_left = 149.0
offset_top = 1237.0
offset_right = 570.0
offset_bottom = 1337.0
pivot_offset = Vector2(211, -496)
size_flags_horizontal = 6
size_flags_vertical = 4
editable = false
metadata/_edit_use_anchors_ = true

[node name="request" type="HTTPRequest" parent="device_credentials"]

[node name="next" type="Button" parent="."]
offset_left = -51.0
offset_top = 875.0
offset_right = 51.0
offset_bottom = 973.0
disabled = true
text = "Next"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="device_connection/send" to="." method="_on_device_connection_send_pressed"]
[connection signal="pressed" from="device_connection/already_connected" to="." method="_on_device_connection_already_connected_pressed"]
[connection signal="request_completed" from="device_connection/request" to="." method="_on_device_connection_request_completed"]
[connection signal="pressed" from="server/register_device" to="." method="_on_server_register_device_pressed"]
[connection signal="pressed" from="server/log_in" to="." method="_on_server_log_in_pressed"]
[connection signal="request_completed" from="server/request" to="." method="_on_server_request_completed"]
[connection signal="pressed" from="device_credentials/send" to="." method="_on_send_credentials_pressed"]
[connection signal="pressed" from="device_credentials/already_logged_in" to="." method="_on_device_credentials_already_logged_in_pressed"]
[connection signal="request_completed" from="device_credentials/request" to="." method="_on_device_credentials_request_completed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
